[tool.poetry]
name = "whisperer"
version = "0.1.0"
description = "A command line utility for transcribing audio and video files"
authors = ["le_woudar <rollandkev@yahoo.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai-whisper = {git = "https://github.com/openai/whisper.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
