[tool.poetry]
name = "whisperer"
version = "0.1.0"
description = "A command line utility for transcribing audio and video files"
authors = ["le_woudar <rollandkev@yahoo.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
click = "^8.1.7"


[tool.poetry.group.lint.dependencies]
ruff = "^0.1.8"
bandit = "^1.7.6"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
  "I",   # isort
  "S",   # flake8-bandit
  "B",   # flake8-bugbear
  "C90", # McCabe complexity
  "RUF"
]
ignore = ["S603"]

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
